--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <img src="dice-5.png" alt="Dice" class="dice" />
     </div>
 
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="challenges.js"></script>
   </body>
 </html>
